--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -5,7 +5,7 @@
     <title>Title</title>
   </head>
   <body>
-    <img src="../../images/cooltext340808855470369.gif"/>
+  <img th:src="@{/images/cooltext340808855470369.gif}"/>
     <br>
     <ul style="list-style-type: none;">
       <li style="display: inline-block;"><a href="/">Home</a></li>
