--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -14,6 +14,7 @@
     <title>Title</title>
   </head>
   <body>
+    <img th:src="@{/images/cooltext340808855470369.gif}"/>
     <h1>This is the posts/index page</h1>
     <ul style="list-style-type: none; ">
       <li style="display: inline-block;"><a href="/">Home</a></li>
