--- a/src/main/resources/fragments/header-navbar.html
+++ b/src/main/resources/fragments/header-navbar.html
@@ -1,8 +1,11 @@
-<img th:src="@{/images/cooltext340808855470369.gif}" xmlns:th="http://www.w3.org/1999/xhtml"/>
-<h1>This is the posts/index page</h1>
-<ul style="list-style-type: none; ">
-  <li style="display: inline-block;"><a href="/">Home</a></li>
-  <li style="display: inline-block;"><a href="/posts">View Posts</a></li>
-  <li style="display: inline-block;"><a href="/posts/create">Create Posts</a></li>
-</ul>
-<hr>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
+  <th:block th:fragment="header-navbar">
+    <img th:src="@{/images/cooltext340808855470369.gif}"/>
+    <h1>This is the posts/index page</h1>
+    <ul style="list-style-type: none; ">
+      <li style="display: inline-block;"><a href="/">Home</a></li>
+      <li style="display: inline-block;"><a href="/posts">View Posts</a></li>
+      <li style="display: inline-block;"><a href="/posts/create">Create Posts</a></li>
+    </ul>
+    <hr>
+  </th:block>
